fixed showcase page on Mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@ a.nav-link:focus, a.nav-link:hover {
   background-color: #181f1c;
 }
 
+.navbar-toggler-icon {
+  filter: invert(1);
+}
 
 /* } This prop was added to make the collapse transition smoother. Added as well a div arround the immediate collapse child and specified the margin and padding zero. what it does, it moves the button back and forward and not displaying the collapse. Still not working :( */
 .navbar-collapse {
@@ -303,9 +306,29 @@ h1.skills-btn {
     
   }
 
+  .skills-section {
+    margin-top: -20px;
+    margin-bottom: -10px;
+  }
+
   .my-project-text {
     width: 100%;
   }
+
+  .simplysagelogo {
+    width: 40%;
+  }
+
+  .showcase img {
+    padding-top: 1;
+  }
+
+  .overlap-text img {
+    transform: translateY(-10px); /* Moves the image up by 20px */
+    transform: translateX(-20px);
+    margin-bottom: 100px;
+}
+
 
 }
 
